--- a/AppHytracked/app/src/main/AndroidManifest.xml
+++ b/AppHytracked/app/src/main/AndroidManifest.xml
@@ -14,14 +14,15 @@
             android:configChanges="orientation"
             android:label="@string/title_activity_main_menu"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".SetupMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainScreen"></activity>
     </application>
 
 </manifest>
