Add implementation o Bluetooth API and Bootle with User and Leds

--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -1,3 +1,5 @@
 all:
 	zip -r libraries.zip libraries
 	zip -r Settings.zip Settings
+	cp -r libraries/* ~/.Arduino/libraries/.
+	cp -r Settings	~/.Arduino/libraries/.
